fixing some dark mode things

--- a/src/styles/elements/_forms.scss
+++ b/src/styles/elements/_forms.scss
@@ -140,6 +140,7 @@
         outline: none;
         background: none;
         background: var(--gray);
+        color: var(--p);
         border: none;
         border-image: none;
         border-radius: 5px;
