--- a/src/styles/pages/resources/_getting-started.scss
+++ b/src/styles/pages/resources/_getting-started.scss
@@ -114,7 +114,11 @@
     }
     .text {
       padding-right: 0;
-      padding-top: 0;
+      padding-top: $col-vw/2;
+
+      @include breakpoint($laptop-break) {
+        padding-top: 0;
+      }
 
       @include breakpoint($tablet-break) {
         padding-left: $col-vw * 2;
@@ -201,6 +205,12 @@
     .text {
       .col-inner {
         background: var(--gray);
+      }
+    }
+
+    .image {
+      &::before {
+        filter: brightness(0.5);
       }
     }
   }
